# oracle-price-feed-assessment

./: .gitignore  Anchor.toml  README.md
backend/: .env.example  Cargo.toml
backend/src/: api.rs  cache.rs  config.rs  database.rs  error.rs  main.rs  price_aggregator.rs  pyth_client.rs  switchboard_client.rs  type.rs
migrations/: 001_initial_schema.sql
programs/oracle_price_feed/: Cargo.toml
programs/oracle_price_feed/src/: lib.rs
tests/: oracle_price_feed.ts
